# VectorDB-Light

./: .gitignore  chat_llm.py  check_packages.py  choose_documents_and_vector_model.py  config.py  constants.py  create_symlinks.py  document_processor.py  download_model.py  embedding_models.py  gui.py  gui_tabs_database_query.py  gui_tabs_databases.py  gui_tabs_settings_database_create.py  pyproject.toml  setup_windows.py  stage_extract.py  stage_split.py  stage_tokenize.py  utilities_core.py  vector_db_creator.py  vector_db_query.py
